refactoring and cleaning main codebase with dotenv.
